codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__account_pool_command_history.snap
---
source: tui/src/chatwidget/tests/account_pools_tests.rs
expression: lines_to_single_string(&history)
---
› /accounts
› /accounts select oc
› /pools
› /pools select work
› /usage
