codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__account_pool_report_copy_picker.snap
---
source: tui/src/chatwidget/tests/account_pools_tests.rs
assertion_line: 283
expression: "render_bottom_popup(&chat, 80)"
---
  Copy to clipboard


› 1. Whole report  **Pools (0)**

  enter select · esc back
