codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__configured_account_footer_80.snap
---
source: tui/src/chatwidget/tests/account_pools_tests.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.4 xhigh fast · /tmp/project · feature/account-footer · 50% 6d21h · a@ex…"
