codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__configured_account_footer_picker.snap
---
source: tui/src/chatwidget/tests/account_pools_tests.rs
assertion_line: 108
expression: "render_bottom_popup(&chat, 100)"
---
  Configure Status Line
  Select which items to display in the status line.

  Type to search

› [x] Use theme colors      Apply colors from the active /theme
  ───────────────────────
  [x] model-with-reasoning  Current model name with reasoning level
  [x] current-dir           Current working directory
  [x] git-branch            Current Git branch (omitted when unavailable)
  [x] account-weekly        Active account alias, weekly quota and reset countdown
  [x] pool-weekly           Pool weekly quota sum and earliest reset (excludes banked resets)
  [ ] model                 Current model name
↓
  gpt-5.4 xhigh fast · /tmp/project · feature/account-footer · oa 14% 6d19h · nano 114% 4d7h
  space toggle · ←/→ reorder · enter save · esc cancel
